--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/JKeun/node-js-practice#readme",
   "dependencies": {
+    "express": "^4.14.0",
     "request": "^2.78.0"
   }
 }
