--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/JKeun/node-js-practice#readme",
   "dependencies": {
     "express": "^4.14.0",
+    "pug": "^2.0.0-beta6",
     "request": "^2.78.0"
   }
 }
