--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/JKeun/node-js-practice#readme",
   "dependencies": {
+    "bcrypt": "^1.0.0",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "mongoose": "^4.7.0",
