--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "dependencies": {
     "bcrypt": "^1.0.0",
     "body-parser": "^1.15.2",
+    "connect-flash": "^0.1.1",
     "express": "^4.14.0",
+    "express-messages": "^1.0.1",
     "express-session": "^1.14.2",
     "mongoose": "^4.7.0",
     "morgan": "^1.7.0",
