--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "express-session": "^1.14.2",
     "mongoose": "^4.7.0",
     "morgan": "^1.7.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "pug": "^2.0.0-beta6",
     "request": "^2.79.0"
   }
