--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^4.7.0",
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
+    "passport-kakao": "0.0.4",
     "passport-local": "^1.0.0",
     "pug": "^2.0.0-beta6",
     "request": "^2.79.0"
